--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.28.3",
     "@react-three/fiber": "^8.7.2",
     "next": "12.2.5",
     "react": "18.2.0",
